@@ -139,13 +139,13 @@
              and "bind-address" attributes.
           -->
         <!--
-        <alias source="/foo" dest="/bar"/>
+        <alias source="/foo" destination="/bar"/>
           -->
         <!-- Aliases: can also be used for simple redirections as well,
              this example will redirect all requests for http://server:port/ to
              the status page
           -->
-        <alias source="/" dest="/status.xsl"/>
+        <alias source="/" destination="/status.xsl"/>
     </paths>
 
     <logging>
